--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=5000
+MONGO_URI=mongodb+srv://noura:Jan41981@expense-tracker.cyvdl.mongodb.net/expenses?retryWrites=true&w=majority
