--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 MONGO_URI=mongodb+srv://noura:Jan41981@expense-tracker.cyvdl.mongodb.net/expenses?retryWrites=true&w=majority
